--- a/Calculator MVP/app/src/main/res/layout/activity_main.xml
+++ b/Calculator MVP/app/src/main/res/layout/activity_main.xml
@@ -6,15 +6,32 @@
     android:layout_height="match_parent"
     tools:context=".ui.MainActivity">
 
-    <EditText
-        android:id="@+id/display"
+    <TextView
+        android:id="@+id/input"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:gravity="right"
-        app:layout_constraintBottom_toTopOf="@+id/clearOps"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:background="#fff"
+        android:inputType="text|textNoSuggestions"
+        android:gravity="center|end"
+        android:maxLength="14"
+        android:textSize="20dp"
+        android:text="0"
+        android:textColor="#000"
+        app:layout_constraintBottom_toTopOf="@+id/sign"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/sign"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_below="@id/input"
+        android:background="#fff"
+        android:gravity="center|end"
+        android:textColor="#000"
+        android:textFontWeight="1"
+        android:textSize="25dp"
+        app:layout_constraintBottom_toTopOf="@+id/clearOps" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clearOps"
@@ -149,7 +166,7 @@
             android:id="@+id/multiply"
             android:layout_width="100dp"
             android:layout_height="70dp"
-            android:text="x"
+            android:text="*"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/divide" />
 
