--- a/Calculator MVP/app/src/main/res/layout/activity_main.xml
+++ b/Calculator MVP/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,14 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:background="#fff"
-        android:inputType="text|textNoSuggestions"
         android:gravity="center|end"
+        android:inputType="text|textNoSuggestions"
         android:maxLength="14"
-        android:textSize="20dp"
         android:text="0"
         android:textColor="#000"
+        android:textSize="20dp"
         app:layout_constraintBottom_toTopOf="@+id/sign"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -31,27 +32,30 @@
         android:textColor="#000"
         android:textFontWeight="1"
         android:textSize="25dp"
-        app:layout_constraintBottom_toTopOf="@+id/clearOps" />
+        app:layout_constraintBottom_toTopOf="@+id/clearOps"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clearOps"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="10dp"
         app:layout_constraintBottom_toTopOf="@+id/numbers"
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/clear"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="C"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/delete"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Clr"
             app:layout_constraintStart_toEndOf="@id/clear"
             app:layout_constraintTop_toTopOf="parent" />
@@ -62,29 +66,31 @@
         android:id="@+id/numbers"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
+        android:layout_marginStart="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent">
 
         <Button
             android:id="@+id/seven"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="7"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/eight"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="8"
             app:layout_constraintStart_toEndOf="@+id/seven"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/nine"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="9"
             app:layout_constraintStart_toEndOf="@+id/eight"
             app:layout_constraintTop_toTopOf="parent" />
@@ -92,56 +98,56 @@
 
         <Button
             android:id="@+id/four"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="4"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/seven" />
 
         <Button
             android:id="@+id/five"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="5"
             app:layout_constraintStart_toEndOf="@+id/four"
             app:layout_constraintTop_toBottomOf="@id/eight" />
 
         <Button
             android:id="@+id/six"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="6"
             app:layout_constraintStart_toEndOf="@+id/five"
             app:layout_constraintTop_toBottomOf="@id/nine" />
 
         <Button
             android:id="@+id/one"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="1"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/four" />
 
         <Button
             android:id="@+id/two"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="2"
             app:layout_constraintStart_toEndOf="@+id/one"
             app:layout_constraintTop_toBottomOf="@id/five" />
 
         <Button
             android:id="@+id/three"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="3"
             app:layout_constraintStart_toEndOf="@+id/two"
             app:layout_constraintTop_toBottomOf="@id/six" />
 
         <Button
             android:id="@+id/zero"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="0"
             app:layout_constraintStart_toEndOf="@+id/one"
             app:layout_constraintTop_toBottomOf="@id/two" />
@@ -152,44 +158,46 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@id/numbers">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/numbers"
+        android:layout_marginBottom="20dp">
 
         <Button
             android:id="@+id/divide"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="/"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <Button
             android:id="@+id/multiply"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="*"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/divide" />
 
         <Button
             android:id="@+id/minus"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="-"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/multiply" />
 
         <Button
             android:id="@+id/plus"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="+"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/minus" />
 
         <Button
             android:id="@+id/equal"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="="
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/plus" />
