--- a/ApplicationMVVM/app/src/main/res/layout/list_item.xml
+++ b/ApplicationMVVM/app/src/main/res/layout/list_item.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
+
+    <data>
+
+        <import type="android.view.View" />
+
+        <variable
+            name="itemData"
+            type="com.example.applicationmvvm.model.json.Pokemon" />
+    </data>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -24,16 +30,19 @@
                     android:id="@+id/pokemonPicture"
                     android:layout_width="200dp"
                     android:layout_height="200dp"
-                    android:layout_gravity="center" />
+                    android:layout_gravity="center"
+                    android:text="@{itemData.img}"
+                    />
 
                 <TextView
                     android:id="@+id/pokemonName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:textAlignment="center" />
+                    android:textAlignment="center"
+                    android:text="@{itemData.name}"/>
             </LinearLayout>
 
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
-</RelativeLayout>
+</layout>
