--- a/ApplicationMVVM/app/src/main/res/layout/pokemons_fragment.xml
+++ b/ApplicationMVVM/app/src/main/res/layout/pokemons_fragment.xml
@@ -15,7 +15,7 @@
         android:layout_height="match_parent">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+            android:id="@+id/recycler_view"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:visibility="@{safeUnbox(viewmodel.dataLoading) ? View.GONE : View.VISIBLE}" />
